--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,15 +11,24 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name=".DiceRollerActivity"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".SetCreatorActivity"
+            android:label="@string/title_creator" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.group5.diceroller.DiceRollerActivity" />
+        </activity>
+
     </application>
 
 </manifest>
