--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,8 @@
 
         <activity
             android:name=".DiceRollerActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -23,7 +24,8 @@
 
         <activity
             android:name=".SetCreatorActivity"
-            android:label="@string/title_creator" >
+            android:label="@string/title_creator"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.group5.diceroller.DiceRollerActivity" />
@@ -31,7 +33,8 @@
 
         <activity
             android:name=".EditSetActivity"
-            android:label="@string/title_creator" >
+            android:label="@string/title_creator"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.group5.diceroller.DiceRollerActivity" />
