--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity
             android:name=".DiceRollerActivity"
             android:label="@string/title_activity_main"
+            android:windowSoftInputMode="stateHidden"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +26,7 @@
         <activity
             android:name=".SetCreatorActivity"
             android:label="@string/title_creator"
+            android:windowSoftInputMode="stateHidden"
             android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -34,6 +36,7 @@
         <activity
             android:name=".EditSetActivity"
             android:label="@string/title_creator"
+            android:windowSoftInputMode="stateHidden"
             android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
